--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     color: var(--text-color);
     font-family: var(--font-main), serif;
     height: 100vh;
-    overflow: auto;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
