--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 :root {
     --bg-color: #0f1923;
     --text-color: #e0e0e0;
-    --accent-color: #d4a373;
+    --accent-color: #b57433;
     --tech-color: #ffcc00;
     --danger-color: #ff5555;
     --secret-color: #0da17f;
     --font-main: "CMU Serif", serif;
-    --font-ui: 'Courier New', monospace;
+    --font-ui: 'CMU Serif', serif;
 }
 
 body {
@@ -80,7 +80,8 @@ body {
     width: 100%;
     max-width: 900px;
     margin: auto;
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0, 0, 0, 0.13);
+
     padding: 40px;
     border: 1px solid #333;
     border-top: 4px solid var(--accent-color);
@@ -129,6 +130,7 @@ p{
     border: 1px solid #444;
     background: #000;
     margin-bottom: 15px;
+
 }
 .status-danger {
     color: var(--danger-color);
@@ -171,7 +173,7 @@ p{
     color: var(--danger-color);
     opacity: 0.7;
 }
-btn-abort:hover{
+.btn-abort:hover{
     background: var(--danger-color);
     color: #fff;
     opacity: 1;
@@ -268,6 +270,7 @@ audio{
     width: 20%;
     z-index: 10;
 }
+/*
 .zone-left{left: 0;} .zone-mid-left{left: 20%;} .zone-center{left: 40%}
 .zone-mid-right{left: 60%;} .zone-right{left: 80%;}
 
@@ -276,6 +279,7 @@ audio{
 .zone-center:hover ~ .background-layer { transform: translate(0, 0); }
 .zone-mid-right:hover ~ .background-layer { transform: translate(-15px, 0); }
 .zone-right:hover ~ .background-layer { transform: translate(-30px, 0); }
+*/
 
 #intro-overlay {
     position: fixed; top: 0; left: 0; width: 100%; height: 100%;
@@ -321,4 +325,9 @@ audio{
 .next-btn:hover {
     color: #fff;
     text-shadow: 0 0 5px var(--accent-color);
+}
+#comp-screen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
