--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: 'Bygonest';
+    src: url("/thingsUsed/bygonesttypewriterdemo-4b1dp-webfont.woff");
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'X-typewriter';
+    src: url("/thingsUsed/xtypewriter-regular-webfont.woff");
+    font-weight: normal;
+    font-style: normal;
+}
 :root {
     --bg-color: #0f1923;
     --text-color: #e0e0e0;
@@ -5,8 +17,9 @@
     --tech-color: #ffcc00;
     --danger-color: #ff5555;
     --secret-color: #0da17f;
-    --font-main: "CMU Serif", serif;
-    --font-ui: 'CMU Serif', serif;
+    --font-main: 'Bygonest', serif;
+    --font-ui: 'Bygonest, serif';
+    --text-font: 'X-typewriter';
 }
 
 body {
@@ -95,7 +108,7 @@ body {
 
 
 h1 {
-    font-family: var(--font-ui);
+    font-family: var(--font-main), serif;
     letter-spacing: 2px;
     text-transform: uppercase;
     color: var(--accent-color);
@@ -105,7 +118,7 @@ h1 {
 }
 
 p{
-    font-family: "CMU Serif", serif;
+    font-family: var(--text-font);
     font-size: 1.2rem;
     line-height: 1.6;
     margin-bottom: 20px;
@@ -123,7 +136,7 @@ p{
 }
 
 .hub-text {
-    font-family: "CMU Serif", serif;
+    font-family: var(--text-font);
     font-size: 0.95rem;
     display: inline-block;
     padding: 5px 10px;
@@ -236,7 +249,7 @@ audio{
     filter: saturate(1.2) contrast(1.1);
 }
 .comic-panel {
-    font-family: "CMU Serif", serif;
+    font-family: var(--text-font);
     background-color: var(--bg-color);
     color: var(--text-color);
     padding: 10px 15px;
@@ -248,7 +261,7 @@ audio{
     line-height: 1.3
 }
 .choice-container .btn {
-    font-family: "CMU Serif", serif;
+    font-family: var(--text-font);
     letter-spacing: 1px;
     font-size: 1.2rem;
     text-transform: uppercase;
@@ -299,15 +312,19 @@ audio{
     opacity: 0;
     transition: opacity 1s ease-in;
 }
-
-.story-toggle:checked ~ .hidden-content {
+.story-toggle + .hidden-content{
+    display: none;
+}
+.story-toggle:checked + .hidden-content {
     display: block;
     animation: fadeIn 0.8s forwards;
 }
 
-.story-toggle:checked + .story-block .next-btn {
+.story-toggle:checked + .hidden-content .story-block .next-btn {
     display: none;
 }
+
+
 
 @keyframes fadeIn {
     from { opacity: 0; transform: translateY(10px); }
