--- a/style.css
+++ b/style.css
@@ -140,8 +140,6 @@ p{
     font-size: 0.95rem;
     display: inline-block;
     padding: 5px 10px;
-    border: 1px solid #444;
-    background: #000;
     margin-bottom: 15px;
 
 }
@@ -162,6 +160,22 @@ p{
     margin-top: 30px;
     border-top: 1px solid #333;
     padding-top: 20px;
+}
+
+.choice-container .btn {
+    font-family: var(--text-font);
+    letter-spacing: 1px;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    padding: 18px 25px;
+    border-color: var(--accent-color);
+    color: var(--accent-color);
+    border-radius: 10px;
+}
+
+.choice-container .btn:hover {
+    background: var(--accent-color);
+    color: var(--bg-color);
 }
 .btn {
         display: block;
@@ -233,47 +247,7 @@ audio{
     display: none;
 }
 
-.comic-panel{
-    position: relative;
-    width: 100%;
-    max-width: 600px;
-    margin: 30px auto;
-    border: 3px solid var(--text-color);
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.7);
-    overflow: hidden;
-}
-.comic-panel img{
-    width: 100%;
-    height: auto;
-    display: block;
-    filter: saturate(1.2) contrast(1.1);
-}
-.comic-panel {
-    font-family: var(--text-font);
-    background-color: var(--bg-color);
-    color: var(--text-color);
-    padding: 10px 15px;
-    border-top: 2px solid var(--accent-color);
-    font-size: 1.1rem;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    line-height: 1.3
-}
-.choice-container .btn {
-    font-family: var(--text-font);
-    letter-spacing: 1px;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    padding: 18px 25px;
-    border-color: var(--accent-color);
-    color: var(--accent-color);
-}
 
-.choice-container .btn:hover {
-    background: var(--accent-color);
-    color: var(--bg-color);
-}
 
 
 .zone{
@@ -347,4 +321,7 @@ audio{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+#reveal-1:checked ~ .audio-control {
+    display: block;
 }
