--- a/style.css
+++ b/style.css
@@ -257,16 +257,6 @@ audio{
     width: 20%;
     z-index: 10;
 }
-/*
-.zone-left{left: 0;} .zone-mid-left{left: 20%;} .zone-center{left: 40%}
-.zone-mid-right{left: 60%;} .zone-right{left: 80%;}
-
-.zone-left:hover ~ .background-layer { transform: translate(30px, 0); }
-.zone-mid-left:hover ~ .background-layer { transform: translate(15px, 0); }
-.zone-center:hover ~ .background-layer { transform: translate(0, 0); }
-.zone-mid-right:hover ~ .background-layer { transform: translate(-15px, 0); }
-.zone-right:hover ~ .background-layer { transform: translate(-30px, 0); }
-*/
 
 #intro-overlay {
     position: fixed; top: 0; left: 0; width: 100%; height: 100%;
@@ -324,4 +314,35 @@ audio{
 }
 #reveal-1:checked ~ .audio-control {
     display: block;
+}
+
+.handwritten-note {
+    font-family: var(--font-main), serif;
+    color: #ccc;
+    border-left: 2px solid #555;
+    border-right: 2px solid #555;
+    text-align: center;
+    padding-left: 15px;
+    font-style: italic;
+    margin: 15px 0;
+}
+
+.clue-item {
+    border: 1px solid var(--accent-color);
+    background: rgba(212, 163, 115, 0.1);
+    padding: 15px;
+    color: darkgoldenrod;
+    font-size: 25px;
+    margin: 15px 0;
+    text-align: center;
+    letter-spacing: 2px;
+
+}
+
+.glitch-text {
+    font-family: var(--font-main), Serif;
+    color: #ff0000;
+    text-shadow: 2px 0 #fff, -2px 0 #000;
+    font-weight: bold;
+    letter-spacing: 3px;
 }
