--- a/style.css
+++ b/style.css
@@ -178,17 +178,22 @@ p{
     color: var(--bg-color);
 }
 .btn {
-        display: block;
-        background: transparent;
-        border: 1px solid #555;
-        color: var(--text-color);
-        padding: 12px 20px;
-        text-decoration: none;
-        font-family: var(--font-ui);
-        font-size: 1rem;
-        transition: all 0.3s ease;
-        text-align: center;
-        text-transform: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: transparent;
+    border: 1px solid #555;
+    height: 100%;
+    border-radius: 10px;
+    color: var(--text-color);
+    padding: 18px 25px;
+    text-decoration: none;
+    font-family: var(--font-main), serif;
+    font-size: 1.3rem;
+    transition: all 0.3s ease;
+    text-align: center;
+    text-transform: none;
 }
 .btn:hover{
     background-color: var(--accent-color);
