--- a/style.css
+++ b/style.css
@@ -178,10 +178,7 @@ p{
     color: var(--bg-color);
 }
 .btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: block;
     background: transparent;
     border: 1px solid #555;
     height: 100%;
@@ -251,9 +248,6 @@ p{
 audio{
     display: none;
 }
-
-
-
 
 .zone{
     position: absolute;
@@ -345,7 +339,7 @@ audio{
 }
 
 .glitch-text {
-    font-family: var(--font-main), Serif;
+    font-family: var(--font-main), serif;
     color: #ff0000;
     text-shadow: 2px 0 #fff, -2px 0 #000;
     font-weight: bold;
